--- a/b/third_task/templates/post.html
+++ b/b/third_task/templates/post.html
@@ -30,8 +30,8 @@
         {% endfor %}
     </p>
   <p>
-        {{ form.file.label }}<br>
-        {{ form.file(class="form-control-file") }}<br>
+        {{ form.files.label }}<br>
+        {{ form.files(class="form-control-file") }}<br>
         {% for error in form.text.errors %}
             <p content="alert alert-danger" role="alert">
                 {{ error }}
