--- a/b/third_task/templates/index.html
+++ b/b/third_task/templates/index.html
@@ -27,26 +27,23 @@
     <p>Автор - {{item.user.nickname}}, Дата написания - {{item.created_date}}</p>
     </div>
 
+    {% if item.files_count != 0 %}
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-
   <div class="carousel-inner">
-        {% for img in range(item.files_count) %}
-      <p>{{img}}</p>
-      {% if loop.first %}
-      <p>Я зашел в первый элемент карусели</p>
-      <p>Он называется {{img}}</p>
       <div class="carousel-item active">
-      <img src="{{item.files_linked.split(', ')[img]}}" class="d-block w-100" alt="...">
+      <img src="{{item.files_linked.split(', ')[0]}}" class="d-block w-100" alt="...">
       </div>
-      {% else %}
+      {% if item.files_count > 1 %}
+      {% for img in range(item.files_count) %}
       <div class="carousel-item">
       <img src="{{item.files_linked.split(', ')[img]}}" class="d-block w-100" alt="...">
       </div>
-    {% endif %}
+      {% endfor %}
+      {% endif %}
     </div>
 
     </div>
-    {% endfor %}.
+    {% endif %}
 
 </div>
 {% endfor %}
