--- a/b/third_task/templates/index.html
+++ b/b/third_task/templates/index.html
@@ -28,25 +28,34 @@
     </div>
 
     {% if item.files_count != 0 %}
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div id="{{item.title}}" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
       <div class="carousel-item active">
       <img src="{{item.files_linked.split(', ')[0]}}" class="d-block w-100" alt="...">
       </div>
       {% if item.files_count > 1 %}
-      {% for img in range(item.files_count) %}
+      {% for img in range(1, item.files_count) %}
       <div class="carousel-item">
       <img src="{{item.files_linked.split(', ')[img]}}" class="d-block w-100" alt="...">
       </div>
       {% endfor %}
-      {% endif %}
-    </div>
 
+      {% endif %}
+
+    </div>
+            <a class="carousel-control-prev" href="#{{item.title}}" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#{{item.title}}" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
     </div>
     {% endif %}
+{% endfor %}
 
 </div>
-{% endfor %}
 {% endblock %}
 </body>
 </html>
