--- a/b/third_task/templates/index.html
+++ b/b/third_task/templates/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Carousel Template</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
 </head>
 <body>
 {% extends "base.html" %}
@@ -27,32 +30,31 @@
     <p>Автор - {{item.user.nickname}}, Дата написания - {{item.created_date}}</p>
     </div>
 
-    {% if item.files_count != 0 %}
-    <div id="{{item.title}}" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-      <div class="carousel-item active">
-      <img src="{{item.files_linked.split(', ')[0]}}" class="d-block w-100" alt="...">
-      </div>
-      {% if item.files_count > 1 %}
-      {% for img in range(1, item.files_count) %}
-      <div class="carousel-item">
-      <img src="{{item.files_linked.split(', ')[img]}}" class="d-block w-100" alt="...">
-      </div>
-      {% endfor %}
 
-      {% endif %}
+    <div id="carouselIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            {% for i in item.files_linked.split(', ') %}
+                <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="{{loop.index0}}" {% if loop.index0 == 0 %} class="active" aria-current="true" {% endif %} aria-label="Slide {{ loop.index }}"></button>
+            {% endfor %}
+        </div>
+        <div class="carousel-inner">
+            {% for img in item.files_linked.split(', ') %}
+                <div class="carousel-item {% if loop.first %} active {% endif %}">
+                <img src="{{ url_for('static', filename='img/' + img) }}" class="d-block w-100" alt="{{ loop.index0 }}">
+                </div>
+                {% endfor %}
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Предыдущий</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Следующий</span>
+        </button>
+    </div>
 
-    </div>
-            <a class="carousel-control-prev" href="#{{item.title}}" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#{{item.title}}" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-    </div>
-    {% endif %}
+
 {% endfor %}
 
 </div>
