--- a/b/third_task/templates/index.html
+++ b/b/third_task/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Carousel Template</title>
+    <link rel="stylesheet" href="static/style/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -23,74 +24,46 @@
 
 <h1>Ugly's</h1>
 
+<div class="posts">
+    {% for item in posts%}
+    <div class="post">
+        <div id="carouselExampleIndicators{{loop.index0}}" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                {% for img in item.files_linked.split(', ')[1:] %}
+                <li data-target="#carouselExampleIndicators" data-slide-to="{{ loop.index0 + 1}}"></li>
+                {% endfor %}
+            </ol>
+            <div class="carousel-inner">
+                {% for img in item.files_linked.split(', ') %}
+                <div class="carousel-item {% if loop.index0 == 0 %} active {% endif %}">
+                    <img src="{{ url_for('static', filename='img/' + img) }}" class="d-block w-100"
+                         alt="{{ loop.index0 }} slide">
+                </div>
 
-{% for item in posts%}
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        {% for img in item.files_linked.split(', ')[1:] %}
-            <li data-target="#carouselExampleIndicators" data-slide-to="{{ loop.index0 + 1}}"></li>
-        {% endfor %}
-    </ol>
-    <div class="carousel-inner">
-        {% for img in item.files_linked.split(', ') %}
-            <div class="carousel-item {% if loop.index0 == 0 %} active {% endif %}">
-                <img src="{{ url_for('static', filename='img/' + img) }}" class="d-block w-100" alt="{{ loop.index0 }} slide">
+                {% endfor %}
             </div>
-        {% endfor %}
+            <div>
+                <h2>{{item.title}}</h2>
+
+                <div>{{item.content}}</div>
+                <div>
+                    Текст - {{item.text}}
+                    <p>Автор: {{item.user.nickname}}, Дата написания: {{item.created_date}}</p>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators{{loop.index0}}" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators{{loop.index0}}" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+    {% endfor %}
 </div>
-{% endfor %}
-<!--{% for item in posts%}-->
-<!--<div class="col-md6 border rounded">-->
-
-
-<!--    <h2>{{item.title}}</h2>-->
-
-<!--    <div>-->
-<!--        {{item.content}}-->
-<!--    </div>-->
-
-<!--    <div>-->
-<!--        Текст - {{item.text}}-->
-<!--    <p>Автор - {{item.user.nickname}}, Дата написания - {{item.created_date}}</p>-->
-<!--    </div>-->
-
-
-<!--    <div id="carouselIndicators" class="carousel slide" data-bs-ride="carousel">-->
-<!--        <div class="carousel-indicators">-->
-<!--            {% for i in item.files_linked.split(', ') %}-->
-<!--                <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="{{loop.index0}}" {% if loop.index0 == 0 %} class="active" aria-current="true" {% endif %} aria-label="Slide {{ loop.index }}"></button>-->
-<!--            {% endfor %}-->
-<!--        </div>-->
-<!--        <div class="carousel-inner">-->
-<!--            {% for img in item.files_linked.split(', ') %}-->
-<!--                <div class="carousel-item {% if loop.first %} active {% endif %}">-->
-<!--                <img src="{{ url_for('static', filename='img/' + img) }}" class="d-block w-100" alt="{{ loop.index0 }}">-->
-<!--                </div>-->
-<!--                {% endfor %}-->
-<!--        </div>-->
-<!--        <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">-->
-<!--            <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-<!--            <span class="visually-hidden">Предыдущий</span>-->
-<!--        </button>-->
-<!--        <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">-->
-<!--            <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-<!--            <span class="visually-hidden">Следующий</span>-->
-<!--        </button>-->
-<!--    </div>-->
-
-
-<!--{% endfor %}-->
-
 </div>
 {% endblock %}
 </body>
